include/dgo.h


struct dgo_control_type {
    bool f_indexing;
    int error;
    int out;
    int print_level;
    int start_print;
    int stop_print;
    int print_gap;
    int maxit;
    int max_evals;
    int dictionary_size;
    int alive_unit;
    char alive_file[31];
    real_wp_ infinity;
    real_wp_ lipschitz_lower_bound;
    real_wp_ lipschitz_reliability;
    real_wp_ lipschitz_control;
    real_wp_ stop_length;
    real_wp_ stop_f;
    real_wp_ obj_unbounded;
    real_wp_ cpu_time_limit;
    real_wp_ clock_time_limit;
    bool hessian_available;
    bool prune;
    bool perform_local_optimization;
    bool space_critical;
    bool deallocate_error_fatal;
    char prefix[31];
    struct hash_control_type hash_control;
    struct ugo_control_type ugo_control;
    struct trb_control_type trb_control;
};
struct dgo_time_type {
    real_sp_ total;
    real_sp_ univariate_global;
    real_sp_ multivariate_local;
    real_wp_ clock_total;
    real_wp_ clock_univariate_global;
    real_wp_ clock_multivariate_local;
};
struct dgo_inform_type {
    int status;
    int alloc_status;
    char bad_alloc[81];
    int iter;
    int f_eval;
    int g_eval;
    int h_eval;
    real_wp_ obj;
    real_wp_ norm_pg;
    real_wp_ length_ratio;
    real_wp_ f_gap;
    char why_stop[2];
    struct dgo_time_type time;
    struct hash_inform_type hash_inform;
    struct ugo_inform_type ugo_inform;
    struct trb_inform_type trb_inform;
};
void dgo_initialize( void **data, 
                     struct dgo_control_type *control,
                     int *status );
void dgo_read_specfile( struct dgo_control_type *control, 
                        const char specfile[] );
void dgo_import( struct dgo_control_type *control,
                 void **data,
                 int *status, 
                 int n, 
                 const real_wp_ x_l[], 
                 const real_wp_ x_u[],
                 const char H_type[], 
                 int ne, 
                 const int H_row[],
                 const int H_col[], 
                 const int H_ptr[] );
void dgo_reset_control( struct dgo_control_type *control,
                        void **data,
                        int *status );
void dgo_solve_with_mat( void **data,
                         void *userdata, 
                         int *status, 
                         int n, 
                         real_wp_ x[], 
                         real_wp_ g[],
                         int ne, 
                         int (*eval_f)(
                           int, const real_wp_[], real_wp_*, const void * ), 
                         int (*eval_g)(
                           int, const real_wp_[], real_wp_[], const void * ),
                         int (*eval_h)(
                           int, int, const real_wp_[], real_wp_[], 
                           const void * ),
                         int (*eval_hprod)(
                           int, const real_wp_[], real_wp_[], const real_wp_[], 
                           bool, const void * ),
                         int (*eval_prec)(
                           int, const real_wp_[], real_wp_[], const real_wp_[], 
                           const void * ) );
void dgo_solve_without_mat( void **data,
                            void *userdata, 
                            int *status, 
                            int n, 
                            real_wp_ x[], 
                            real_wp_ g[], 
                            int (*eval_f)(
                              int, const real_wp_[], real_wp_*, const void * ), 
                            int (*eval_g)(
                              int, const real_wp_[], real_wp_[], const void * ),
                            int (*eval_hprod)(
                              int, const real_wp_[], real_wp_[], 
                              const real_wp_[], bool, const void * ), 
                            int (*eval_shprod)(int, const real_wp_[], int, 
                              const int[], const real_wp_[], int*, int[], 
                              real_wp_[], bool, const void * ), 
                            int (*eval_prec)(
                              int, const real_wp_[], real_wp_[], 
                              const real_wp_[], const void * ) );
void dgo_solve_reverse_with_mat( void **data,
                                 int *status, 
                                 int *eval_status, 
                                 int n, 
                                 real_wp_ x[], 
                                 real_wp_ f, 
                                 real_wp_ g[], 
                                 int ne, 
                                 real_wp_ H_val[], 
                                 const real_wp_ u[], 
                                 real_wp_ v[] );
void dgo_solve_reverse_without_mat( void **data,
                                    int *status, 
                                    int *eval_status, 
                                    int n, 
                                    real_wp_ x[], 
                                    real_wp_ f, 
                                    real_wp_ g[], 
                                    real_wp_ u[], 
                                    real_wp_ v[],
                                    int index_nz_v[], 
                                    int *nnz_v, 
                                    const int index_nz_u[], 
                                    int nnz_u );
void dgo_information( void **data,
                      struct dgo_inform_type *inform,
                      int *status );
void dgo_terminate( void **data, 
                    struct dgo_control_type *control, 
                    struct dgo_inform_type *inform );